build: remove `SWIFT_NEED_EXPLICIT_LIBDISPATCH` (NFC)
This flag was being used as an alias for whether or not the host is
non-Darwin.  Rather than adding custom checks for this, use the explicit
check that CMake supports.  This simplifies the logic and avoids the
proliferation of custom variables which can become confusing for others
who are not familiar with the custom build infrastructure.

--- a/tools/SourceKit/lib/Support/CMakeLists.txt
+++ b/tools/SourceKit/lib/Support/CMakeLists.txt
@@ -11,7 +11,9 @@ target_link_libraries(SourceKitSupport PRIVATE
   swiftSyntax
   clangBasic
   clangRewrite)
-if(SWIFT_NEED_EXPLICIT_LIBDISPATCH)
-  target_link_libraries(SourceKitSupport INTERFACE dispatch BlocksRuntime)
+if(NOT CMAKE_SYSTEM_NAME STREQUAL Darwin)
+  target_link_libraries(SourceKitSupport INTERFACE
+    dispatch
+    BlocksRuntime)
 endif()
 
