--- a/tools/SourceKit/tools/sourcekitd-test/CMakeLists.txt
+++ b/tools/SourceKit/tools/sourcekitd-test/CMakeLists.txt
@@ -17,8 +17,10 @@ if(SWIFT_SOURCEKIT_USE_INPROC_LIBRARY)
 else()
   target_link_libraries(sourcekitd-test PRIVATE sourcekitd)
 endif()
-if(SWIFT_NEED_EXPLICIT_LIBDISPATCH)
-  target_link_libraries(sourcekitd-test PRIVATE dispatch BlocksRuntime)
+if(NOT CMAKE_SYSTEM_NAME STREQUAL Darwin)
+  target_link_libraries(sourcekitd-test PRIVATE
+    dispatch
+    BlocksRuntime)
 endif()
 
 add_dependencies(sourcekitd-test sourcekitdTestOptionsTableGen)
