--- a/unittests/SyntaxParser/CMakeLists.txt
+++ b/unittests/SyntaxParser/CMakeLists.txt
@@ -24,7 +24,6 @@ endif()
 
 set_property(TARGET SwiftSyntaxParserTests APPEND_STRING PROPERTY
   COMPILE_FLAGS " -fblocks")
-if(NOT CMAKE_SYSTEM_NAME STREQUAL Darwin)
-  target_link_libraries(SwiftSyntaxParserTests PRIVATE
-    BlocksRuntime)
+if(SWIFT_NEED_EXPLICIT_LIBDISPATCH)
+  target_link_libraries(SwiftSyntaxParserTests PRIVATE BlocksRuntime)
 endif()
