--- a/tools/SourceKit/tools/sourcekitd-test/CMakeLists.txt
+++ b/tools/SourceKit/tools/sourcekitd-test/CMakeLists.txt
@@ -2,28 +2,19 @@ set(LLVM_TARGET_DEFINITIONS Options.td)
 swift_tablegen(Options.inc -gen-opt-parser-defs)
 swift_add_public_tablegen_target(sourcekitdTestOptionsTableGen)
 
-<<<<<<< HEAD
+# SWIFT_ENABLE_TENSORFLOW
 if(SWIFT_SOURCEKIT_USE_INPROC_LIBRARY)
-  set(SOURCEKITD_TEST_LINK_LIBS sourcekitdInProc)
   set(SOURCEKITD_TEST_CFLAGS "-DSWIFT_SOURCEKIT_USE_INPROC_LIBRARY")
 else()
-  set(SOURCEKITD_TEST_LINK_LIBS sourcekitd)
   set(SOURCEKITD_TEST_CFLAGS)
 endif()
+# SWIFT_ENABLE_TENSORFLOW END
 
 add_sourcekit_executable(sourcekitd-test
   sourcekitd-test.cpp
   TestOptions.cpp
   C_COMPILE_FLAGS ${SOURCEKITD_TEST_CFLAGS}
-  LINK_LIBS ${SOURCEKITD_TEST_LINK_LIBS} SourceKitSupport
-    clangRewrite clangLex clangBasic
-  LLVM_LINK_COMPONENTS core support option coverage lto
-=======
-add_sourcekit_executable(sourcekitd-test
-  sourcekitd-test.cpp
-  TestOptions.cpp
   LLVM_LINK_COMPONENTS core option coverage lto
->>>>>>> swift-DEVELOPMENT-SNAPSHOT-2019-11-20-a
 )
 target_link_libraries(sourcekitd-test PRIVATE
   SourceKitSupport
