[CMake] Fix find_package for libXml2 on case sensitive filesystems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -926,7 +926,7 @@ find_package(PythonInterp REQUIRED)
 #
 
 if(LLVM_ENABLE_LIBXML2)
-  find_package(Libxml2 REQUIRED)
+  find_package(LibXml2 REQUIRED)
 else()
   find_package(LibXml2)
 endif()
