--- a/lib/SILOptimizer/Utils/Differentiation/CMakeLists.txt
+++ b/lib/SILOptimizer/Utils/Differentiation/CMakeLists.txt
@@ -5,5 +5,6 @@ silopt_register_sources(
   DifferentiationInvoker.cpp
   JVPEmitter.cpp
   LinearMapInfo.cpp
+  PullbackEmitter.cpp
   VJPEmitter.cpp
 )
