--- a/utils/update_checkout/update-checkout-config.json
+++ b/utils/update_checkout/update-checkout-config.json
@@ -295,7 +295,7 @@
                 "icu": "release-65-1",
                 "indexstore-db": "swift-DEVELOPMENT-SNAPSHOT-2019-12-16-a",
                 "sourcekit-lsp": "swift-DEVELOPMENT-SNAPSHOT-2019-12-16-a",
-                "tensorflow": "7c7d924821a8b1b20433c2f3f484bbd409873a84",
+                "tensorflow": "v2.1.0-rc1",
                 "tensorflow-swift-apis": "0aaf944b91703ea6ae9062b3a720d3e27b7eba36",
                 "tensorflow-swift-quote": "34d4112c294e9eccfb575dd8f39e6e3b0b6bc008"
             }
